--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -82,6 +82,10 @@
 			path = "Libraries/Paths.lua",
 			id = 1068
 		},
+	    {
+        	path = "Libraries/Libraries.Paths.lua",
+        	id = 7098
+        },
 		{
 			path = "Libraries/Text.lua",
 			id = 1059
